2008-02-04  Shai Ayal  <shaiay@users.sourceforge.net>

	* graphics.h.in (axes::properties::update_xlim,
	axes::properties::update_ylim, axes::properties::update_zlim):
	New update methods.

	* graphics.cc (axes::properties::calc_ticks): New function.
	(axes::properties::magform): New function.
	(axes::update_axis_limits): Call update_{x,y,z}lims if
	appropriate.

2008-02-04  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (base_graphics_backend::get_screen_size,
	graphics_backend::get_screen_size): New methods.
	(graphics_backend::available_backends): Export symbol.
	(class figure::properties, class axes::properties): Export classes.
	(figure::properties::get_boundingbox): New utility method.
	(figure::properties::position): Use valid default position.
	(axes::properties::gridlinestyle,
	axes::properties::minorgridlinestyle):
	Use dotted line style as default. 
	* graphics.cc (default_figure_position): New static function.
	(gnuplot_backend::get_screen_size): New method.
	(figure::properties::get_boundingbox): New utility method.

2008-02-02  Shai Ayal  <shaiay@users.sourceforge.org>

        * graphics.h.in (base_scaler::~base_scalar): New virtual destructor.
        * graphics.cc (axes::properties::update_camera): Tag abs with std.

	* graphics.h.in (graphics_backend::find_backend): New function.
	(class figure): Add __backend__ property and set method.
	
2008-02-02  John W. Eaton  <jwe@octave.org>

	* help.cc (do_type): Don't print dyamically loaded function files.

	* ov-fcn.h (octave_function::is_dynamically_loaded_function): Delete.

2008-02-01  John W. Eaton  <jwe@octave.org>

	* symtab.cc (Fset_variable, Fvariable_value):
	New functions, but commented out for now.

2008-01-30  Michael Goffioul  <michael.goffioul@gmail.com>

	* graphics.h.in (axes::properties::get_transform_matrix,
	axes::properties::get_inverse_transform_matrix,
	axes::properties::get_opengl_matrix_1,
	axes::properties::get_opengl_matrix_2,